[MDS-5357] Fixed spacing between archive modal buttons in minespace (#2578)
MDS-5357 Fixed spacing between archive modal buttons in minespace

--- a/services/core-web/src/styles/settings/themeOverride.scss
+++ b/services/core-web/src/styles/settings/themeOverride.scss
@@ -606,6 +606,10 @@
   min-height: 200px;
 }
 
+.ant-modal-footer {
+  padding: 0;
+}
+
 // SIDE MENU NAVIGATION
 .ant-anchor-wrapper {
   background-color: $lightest-grey;
